<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50a445"
    android:orientation="vertical"
    tools:context="com.example.encuesta.LogInActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#50a445"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/login_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_title"
            android:textColor="#000"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="4"
        android:background="#50a445"
        android:gravity="center"
        android:orientation="vertical"
        android:radius="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#50a445"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="10dp"
                android:background="#50a445"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_user" />

                    <EditText
                        android:id="@+id/login_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#fff"
                        android:textColor="#979797"
                        android:ems="10"
                        android:hint="@string/Login_username"
                        android:singleLine="true"
                        android:textSize="25sp" >

                        <requestFocus />
                    </EditText>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#FFF"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/ImageView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_pass" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#fff"
                        android:textColor="#979797"
                        android:textSize="25sp"
                        android:ems="10"
                        android:hint="@string/Login_password"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_btnLogear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#194e29"
            android:text="@string/Login_bLogear"
            android:textColor="#fff"
            android:textSize="23sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#50a445"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/login_tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_fecha"
            android:textColor="#000"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>